--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,5 @@
 locale: "pl"
 
-titles:
-  example:
-    title: "&e&o[&7Example&8Title&e&o] &r"
-    permission: "example.permission"
-
 purger:
   enabled: true
   max-not-online-days: 90
@@ -24,3 +19,15 @@ database:
       database: "Mox_TokenShop"
       user: "root"
       password: "password"
+
+titles:
+  example:
+    title: "&e&o[&7Example&8Title&e&o]&r"
+    permission: "example.permission"
+    gui-item:
+      material: "BOOK"
+      data: 0
+      amount: 1
+      name: "%default-name%" #Placeholders: %default-name%, %default-lore% ,%title%, %permission%, %player%, %selection%
+      lore: "%selection%"
+      glow: false
