Added MoxCore depend

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: MoxChatTitles
 author: Morkazoid
 version: 0.1
-depend: []
+depend: [MoxCore]
 softdepend: []
 description: "Morkazoids premium chat prefixes (titles) plugin. Created for GC2.PL Network"
 main: com.morkaz.moxchattitles.MoxChatTitles
