--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: MoxChatTitles
 author: Morkazoid
-version: 0.1
+version: 1.1
 depend: [MoxCore]
-softdepend: []
+softdepend: [MVdWPlaceholderAPI, PlaceholderAPI]
 description: "Morkazoids premium chat prefixes (titles) plugin. Created for GC2.PL Network"
 main: com.morkaz.moxchattitles.MoxChatTitles
 api-version: 1.13
